--- a/Kyliejenner.html
+++ b/Kyliejenner.html
@@ -42,7 +42,7 @@ Read the full Disclaimer here
                 </p> <p>
                   The terms used in this Privacy Policy have the same meanings
                   as in our Terms and Conditions, which is accessible at
-                  BTS Jhope - FakeCall unless otherwise defined in this Privacy Policy.
+                  Kylie Jenner - FakeCall unless otherwise defined in this Privacy Policy.
                 </p> <p><strong>Information Collection and Use</strong></p> <p>
                   For a better experience, while using our Service, I
                   may require you to provide us with certain personally
